--- a/resource/plot.ui
+++ b/resource/plot.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>578</width>
-    <height>98</height>
+    <width>845</width>
+    <height>151</height>
    </rect>
   </property>
   <property name="acceptDrops">
@@ -203,7 +203,40 @@
       </widget>
      </item>
      <item>
-      <widget class="QTimeEdit" name="timeEdit">
+      <widget class="QDateTimeEdit" name="start_time_edit">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>80</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="date">
+        <date>
+         <year>2018</year>
+         <month>6</month>
+         <day>1</day>
+        </date>
+       </property>
+       <property name="maximumDate">
+        <date>
+         <year>2018</year>
+         <month>6</month>
+         <day>1</day>
+        </date>
+       </property>
+       <property name="minimumDate">
+        <date>
+         <year>2018</year>
+         <month>6</month>
+         <day>1</day>
+        </date>
+       </property>
        <property name="displayFormat">
         <string>HH:mm:ss</string>
        </property>
@@ -217,7 +250,19 @@
       </widget>
      </item>
      <item>
-      <widget class="QTimeEdit" name="timeEdit_2">
+      <widget class="QDateTimeEdit" name="end_time_edit">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>80</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="displayFormat">
         <string>HH:mm:ss</string>
        </property>
@@ -239,7 +284,7 @@
        </property>
        <property name="maximumSize">
         <size>
-         <width>70</width>
+         <width>60</width>
          <height>16777215</height>
         </size>
        </property>
@@ -258,12 +303,25 @@
       <widget class="QPushButton" name="load_button">
        <property name="maximumSize">
         <size>
-         <width>50</width>
+         <width>40</width>
          <height>16777215</height>
         </size>
        </property>
        <property name="text">
         <string>Load</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="redraw_button">
+       <property name="maximumSize">
+        <size>
+         <width>60</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Redraw</string>
        </property>
       </widget>
      </item>
