--- a/resource/plot.ui
+++ b/resource/plot.ui
@@ -109,6 +109,32 @@
       </spacer>
      </item>
      <item>
+      <widget class="QLabel" name="status_label">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Init</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
       <widget class="QCheckBox" name="autoscale_checkbox">
        <property name="text">
         <string>autoscale</string>
